Gtk-3.18: [Budgie-Desktop] Prevent unwanted label scaling in Clock-Applet
It may be under control of auto-scaling related to panel height,
But sometimes it seems too big enough than we expected...

--- a/gtk/sass/3.18/_3rd-party.scss
+++ b/gtk/sass/3.18/_3rd-party.scss
@@ -633,6 +633,12 @@ $full_orientation: ((top, bottom),
   .drop-shadow { background-color: gtkopacity($inverted_dark_color, 0.9); }
 }
 
+// clock-applet styling
+.budgie-panel {
+  // shrink label
+  ClockApplet .label { font-size: 90%; }
+}
+
 .budgie-notification {
   // always use dark-variant
   color: $inverted_fg_color;
